--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a365b8">  <td>21/09/19 12:26:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Auuthorization.actitime()[pri:0, instance:RestAssate.Auuthorization@3059cbc]">actitime</td> 
-  <td>main@1744189907</td>   <td></td> </tr>
+<tr bgcolor="9161a8">  <td>21/09/22 14:49:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataDriven_Test.PostMethod(java.lang.String, java.lang.String)[pri:0, instance:RestAssate.DataDriven_Test@4bb33f74]">PostMethod</td> 
+  <td>main@70323523</td>   <td></td> </tr>
+<tr bgcolor="9161a8">  <td>21/09/22 14:49:21</td>   <td>7515</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataDriven_Test.PostMethod(java.lang.String, java.lang.String)[pri:0, instance:RestAssate.DataDriven_Test@4bb33f74]">PostMethod</td> 
+  <td>main@70323523</td>   <td></td> </tr>
+<tr bgcolor="9161a8">  <td>21/09/22 14:49:23</td>   <td>9728</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataDriven_Test.PostMethod(java.lang.String, java.lang.String)[pri:0, instance:RestAssate.DataDriven_Test@4bb33f74]">PostMethod</td> 
+  <td>main@70323523</td>   <td></td> </tr>
+<tr bgcolor="9161a8">  <td>21/09/22 14:49:26</td>   <td>11965</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataDriven_Test.PostMethod(java.lang.String, java.lang.String)[pri:0, instance:RestAssate.DataDriven_Test@4bb33f74]">PostMethod</td> 
+  <td>main@70323523</td>   <td></td> </tr>
 </table>
